fix inconsistent app-header layout
The header will now appear on all pages, with the layout adjusted
if the audio-overlay is active.

[fixes]
- Uncentered heading text. Caused by default margin value on the `h1`
  element. When the height was too small, it would not longer center the
  text as it used the space to push out margins.

[additions]
- added `.header-bar` layout class in global styles. This allows the
  other components, like the server-selector, to 'fit' into the layout
  of the `app-header`.

--- a/src/app/features/audio/components/audio-overlay/server-selector/server-selector.component.css
+++ b/src/app/features/audio/components/audio-overlay/server-selector/server-selector.component.css
@@ -7,14 +7,13 @@
 
 select {
   background: transparent;
-  border-color: var(--palette-accent);
-  border-radius: 0;
-  border-width: 0 0 0.25rem 0;
   display: block;
   font-size: medium;
-  height: 4rem;
   padding: 1rem;
   width: 100%;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
 
   :hover {
     cursor: pointer;
